--- a/style.css
+++ b/style.css
@@ -95,15 +95,31 @@
 
 @keyframes menu {
   0% {
-    transform: translateY(10px);
-    -webkit-transform: translateY(10px);
-    -moz-transform: translateY(10px);
+    transform: translate3d(0, 10px, 0);
     opacity: 0;
   }
   100% {
-    transform: translateY(0px);
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
+    transform: translate3d(0, 10px, 0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes menu {
+  0% {
+    -webkit-transform: translate3d(0, 10px, 0);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate3d(0, 10px, 0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes menu {
+  0% {
+    -moz-transform: translate3d(0, 10px, 0);
+    opacity: 0;
+  }
+  100% {
+    -moz-transform: translate3d(0, 10px, 0);
     opacity: 1;
   }
 }
